--- a/base/templates/base/about.html
+++ b/base/templates/base/about.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
-
+{% load static %}
 {% block content %}
-<section class="about_us_area section_gap_top">
+<section class="about_us_area section_gap_top" style="margin-bottom:50px">
 		<div class="container">
 			<div class="row about_content align-items-center">
 				<div class="col-lg-6">
