--- a/base/templates/base/news.html
+++ b/base/templates/base/news.html
@@ -14,26 +14,27 @@
             </div>
         </div>
         <div class="row">
-            {% comment %} {% for post in allPosts %} {% endcomment %}
+            {% for news in allNews %}
             <div class="col-lg-4 col-md-6">
                 <div class="blog_items">
-                    <div class="blog_img_box">
-                        <img class="img-fluid" src="{% static 'base/img/blog_img1.png' %}" alt="">
+                   <div class="blog_img_box">
+                        <img class="img-fluid" src="{{news.image.url}}" alt="">
                     </div> 
                     <div class="blog_content">
-                       <center> <a class="title" href="/blogpost/{{post.slug}}">Portable Fashion for women</a></center>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-                        {% comment %} <div class="date">
-                            <a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>{{post.timeStamp}} </a>
-                            <a href="/blogpost/{{post.slug}}"><i class="fa fa-comments-o" aria-hidden="true"></i> Continue..</a>
-                        </div> {% endcomment %}
+                       <center> <a class="title" href="/newspost/{{news.slug}}">{{news.title}}</a></center>
+                        <p >{{news.author}}</p>
+                        <p>{{news.content| truncatechars:300 }}</p>
+                        <div class="date">
+                            <a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>{{news.timeStamp}} </a>
+                            <a href="/newspost/{{news.slug}}"><i class="fa fa-comments-o" aria-hidden="true"></i> Continue..</a>
+                        </div>
                     </div>
                 </div>
             </div>
-           {% comment %}  {% endfor %} {% endcomment %}
+            {% endfor %}
         </div>
     </div>
 </section>
+
 
 {% endblock content %}
