--- a/base/templates/base/tournament.html
+++ b/base/templates/base/tournament.html
@@ -1,5 +1,81 @@
 {% extends 'index.html' %}
+{% load static %}
+{% block tournamentactive %} {% endblock tournamentactive %}
 
 {% block content %}
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="margin-top:70px">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="{% static 'base/img/codm1.jpg' %}" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{% static 'base/img/pubg1.jpg' %}" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{% static 'base/img/valo1.jpg' %}" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+  <section class="upcoming_games_area">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="main_title">
+						<h2>Upcoming Tournaments</h2>
+						<h1>Upcoming Tournaments</h1>
+					</div>
+				</div>
+			</div>
+			<div class="row text-center">
+				<div class="col-lg-3 col-md-6 col-sm-6">
+					<div class="new_games_item">
+						<img src="{% static 'base/img/b_map1.png' %}" alt="">
+						<div class="upcoming_title">
+							<h3><a href="games.html">Best Ps4 Games</a></h3>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 col-sm-6">
+					<div class="new_games_item">
+						<img src="{% static 'base/img/b_map2.png' %}" alt="">
+						<div class="upcoming_title">
+							<h3><a href="games.html">World Dart 2019</a></h3>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 col-sm-6">
+					<div class="new_games_item">
+						<img src="{% static 'base/img/b_map3.png' %}" alt="">
+						<div class="upcoming_title">
+							<h3><a href="games.html">New XBox Games</a></h3>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 col-sm-6">
+					<div class="new_games_item">
+						<img src="{% static 'base/img/b_map4.png' %}" alt="">
+						<div class="upcoming_title">
+							<h3><a href="games.html">Amarican Football</a></h3>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+  
 
 {% endblock content %}
