--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -506,7 +506,7 @@
 				<div class="col-lg-4 hidden-md">
 					<div class="blog_items">
 						<div class="blog_img_box">
-							<img class="img-fluid" src="{% static 'base/img/blog_img3.png' %}" alt="">
+							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
 						</div>
 						<div class="blog_content">
 							<a class="title" href="blog.html">Testing3</a>
