--- a/base/templates/base/signup.html
+++ b/base/templates/base/signup.html
@@ -12,15 +12,15 @@
       <div class="column">
       <input type="firstname" placeholder="First Name" name="first_name"/>
       <input type="text" placeholder="Username" name="username"/>
-      <input class="side" type="password" placeholder="Password" name="password1"/>
+      <input class="side" type="password" placeholder="Password" name="password1" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"/>
      
       
       </select>
       </div>  
       <div class="column">
       <input class="side" type="lastname" placeholder="Last Name" name="last_name"/>
-      <input type="email" placeholder="Email address" name="email"/>
-      <input class="side" type="password" placeholder="Confirm Password" name="password2"/>
+      <input type="email" placeholder="Email address" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"/>
+      <input class="side" type="password" placeholder="Confirm Password" name="password2" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"/>
      {% comment %}  <input type="text" placeholder="Phone No" name="phone"/> {% endcomment %}
         
     
