--- a/base/templates/base/chatroom.html
+++ b/base/templates/base/chatroom.html
@@ -2,6 +2,24 @@
 {% load static %}
 {% block chatactive %} {% endblock chatactive %}
 {% block content %}
+<br>
+<br>
+<br>
+<br>
+<widgetbot
+  server="893379198704549899"
+  channel="893379202026450956"
+  width="100%"
+  height="900"
+></widgetbot>
 
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+
+<script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
+    new Crate({
+        server: '299881420891881473', // WidgetBot.io
+        channel: '299881420891881473' // #support
+    })
+</script>
 
 {% endblock content %}
