--- a/base/templates/base/blog.html
+++ b/base/templates/base/blog.html
@@ -48,4 +48,5 @@
     </div>
 </section>
 
+<center><a href="/create" class="primary_btn" style="margin-bottom:20px">Create a Blog</a></center>
 {% endblock content %}
