--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -155,9 +155,9 @@
 								<div class="section_content">
 									<h6>Upcoming Tournaments</h6>
 									<h1>Be a part of <br>Upcoming Tournaments</h1>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever 
-									since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
-								    </p>
+									<p>This section provides access to all the tournaments and related events data collected by our team. By this we mean the top-discipline World Championships and charity festivals for casual gamers alike. Many of the geek events also fall within our sphere of coverage.
+								    &nbsp;<br><br>
+									</p>
 									<a class="primary_btn" href="/tournament">Learn More</a>
 								</div>
 							</div>
@@ -173,10 +173,10 @@
 							<div class="col-lg-6">
 								<div class="section_content">
 									<h6>Merch Store</h6>
-									<h1>We Believe that <br>Interior beauty Lasts Long</h1>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever 
-									since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
-								    </p>
+									<h1>Buy our <br>amazing Merch</h1>
+									<p>Shop for t-shirts, joggers, backpacks for men and women online at our Merch Store - the one-stop destination for all official merchandise of gamesnation.
+								    <br><br><br>
+									</p>
 									<a class="primary_btn" href="/merch">Learn More</a>
 								</div>
 							</div>
@@ -192,10 +192,14 @@
 							<div class="col-lg-6">
 								<div class="section_content">
 									<h6>ChatRoom</h6>
-									<h1>We Believe that <br>Interior beauty Lasts Long</h1>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever 
-									since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
-								    </p>
+									<h1>Lets have some fun <br>in the chatroom</h1>
+									<p>This is a chatroom for gamers to meet gamers just like them. Chat with hundreds of people from all around the world who share a common interest. Discuss about your favorite gaming platform.
+								    <br>
+									<br>
+									&nbsp;
+									&nbsp;
+									
+									</p>
 									<a class="primary_btn" href="/chatroom">Learn More</a>
 								</div>
 							</div>
