--- a/base/templates/base/contact.html
+++ b/base/templates/base/contact.html
@@ -2,5 +2,64 @@
 
 {% block content %}
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="bootstrap-4.5\css\bootstrap-grid.min.css">
+  <link rel="stylesheet" href="bootstrap-4.5\css\bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon"  href="Images/icon.png" type="image">
+  <script src="https://kit.fontawesome.com/e5e76f2531.js" crossorigin="anonymous"></script>
+
+<div style="margin-top:90px">
+  <title>Contact us</title>
+</head>
+<body>
+  <div class="container-fluid">
+
+    <div class="jumbotron jumbotron-fluid text-center">
+      <div class="container">
+        <h1 class="display-4">Contact us</h1>
+      </div>
+    </div>
+
+    <!-- Form  -->
+    <form method="POST" >
+    {% csrf_token %}
+      <h1 class="mt-4">Contact Us Form</h1>
+      <div class="form-group col-sm-12 col-md-4">
+        <label for="exampleFormControlInput1">Name</label>
+        <input type="Name" class="form-control " id="exampleFormControlInput1" placeholder="Enter Name" name="name">   
+      </div>
+      <div class="form-group col-sm-12 col-md-4 ">
+        <label for="exampleFormControlInput1">Email</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter Email" name="email">
+      </div>
+      <div class="form-group col-sm-12 col-md-4">
+        <label for="exampleFormControlInput1">Phone no</label>
+        <input type="phone" class="form-control" id="exampleFormControlInput1" placeholder="Enter Phone No" name="phone">
+      </div>
+
+      <div class="form-group col-sm-12 col-md-4 ">
+        <label for="exampleFormControlTextarea1">Comment</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Enter comment" name="comment"></textarea>
+      </div>
+     
+      <button type="submit" class="btn btn-dark btnsubmit">Submit</button>
+    </form>
+    
+
+  </div>
+  <br>
+</div>
+
+</body>
+</html>
+
 
 {% endblock content %}
