--- a/base/templates/base/tournament.html
+++ b/base/templates/base/tournament.html
@@ -43,39 +43,40 @@
 			<div class="row text-center">
 				<div class="col-lg-3 col-md-6 col-sm-6">
 					<div class="new_games_item">
-						<img src="{% static 'base/img/b_map1.png' %}" alt="">
+						<img src="{% static 'base/img/codm10.png' %}" alt="">
 						<div class="upcoming_title">
-							<h3><a href="games.html">Best Ps4 Games</a></h3>
+							<h3><a href="games.html">COD Mobile</a></h3>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 col-sm-6">
 					<div class="new_games_item">
-						<img src="{% static 'base/img/b_map2.png' %}" alt="">
+						<img src="{% static 'base/img/pubg10.png' %}" alt="">
 						<div class="upcoming_title">
-							<h3><a href="games.html">World Dart 2019</a></h3>
+							<h3><a href="games.html">PUBG Mobile</a></h3>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 col-sm-6">
 					<div class="new_games_item">
-						<img src="{% static 'base/img/b_map3.png' %}" alt="">
+						<img src="{% static 'base/img/valo10.png' %}" alt="">
 						<div class="upcoming_title">
-							<h3><a href="games.html">New XBox Games</a></h3>
+							<h3><a href="games.html">Valorant</a></h3>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 col-sm-6">
 					<div class="new_games_item">
-						<img src="{% static 'base/img/b_map4.png' %}" alt="">
+						<img src="{% static 'base/img/ff10.jpg' %}" alt="">
 						<div class="upcoming_title">
-							<h3><a href="games.html">Amarican Football</a></h3>
+							<h3><a href="games.html">Free Fire</a></h3>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-  
-
+	
+	
+	
 {% endblock content %}
