--- a/merch/templates/merch/payment.html
+++ b/merch/templates/merch/payment.html
@@ -14,7 +14,7 @@
                     <div class="blog_content">
                        <center> <a class="title" >{{prod.name}}</a></center>
                         <center><p>Rs. {{prod.price}}</p></center>
-                        <a href="/merch/payment/{{merch.slug}}"><center><button type="button" class="btn btn-primary">Buy</button></center></a>
+                        <center><button type="button" class="btn btn-primary">Buy</button></center>
                         {% comment %} <p> ugndnummbf</p>
                         <div class="date">
                             <a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>{{news.timeStamp}} </a>
