--- a/base/templates/base/tournament.html
+++ b/base/templates/base/tournament.html
@@ -76,7 +76,60 @@
 			</div>
 		</div>
 	</section>
+
+	<div>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="main_title">
+						<h2>CODM Tournaments </h2>
+						<h1>CODM Tournaments</h1>
+					</div>
+				</div>
+			</div>
+
+			
+
+	</div>
 	
+	<div>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="main_title">
+						<h2>PUBG Tournaments </h2>
+						<h1>PUBG Tournaments</h1>
+					</div>
+				</div>
+			</div>
+
+	</div>
+
+	<div>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="main_title">
+						<h2>VALORANT Tournaments </h2>
+						<h1>VALORANT Tournaments</h1>
+					</div>
+				</div>
+			</div>
+
+	</div>
+
+	<div>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="main_title">
+						<h2>FREE FIRE Tournaments </h2>
+						<h1>FREE FIRE Tournaments</h1>
+					</div>
+				</div>
+			</div>
+
+	</div>
 	
 	
 {% endblock content %}
