--- a/merch/templates/merch/payment.html
+++ b/merch/templates/merch/payment.html
@@ -9,13 +9,14 @@
           
             <div class="col-lg-12 col-md-12">
                 <div class="blog_items" >
-                   <center><div class="blog_img_box col-lg-12 col-md-12" style="height: 450px; width: 300px">
+                   <center><div class="blog_img_box col-lg-12 col-md-12" style="height: 300px; width: 450px">
                         <img  style="height: 750px, width: 500px" class="img-fluid" src="{{prod.image.url}}" alt="" >
                     </div></center>
                     <div class="blog_content">
                        <center> <a class="title" style="color: blue" >{{prod.name}}</a></center>
                         <center><p>Rs. {{prod.price}}</p></center>
-                        
+
+             
                         
       <center><div class="form-group col-sm-12 col-md-6">
         <label for="exampleFormControlInput1">Name</label>
@@ -30,10 +31,37 @@
       <center><div class="form-group col-sm-12 col-md-6">
         <label for="exampleFormControlTextarea1">Address</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Enter Address" name="address"></textarea>
-      </div></center>
+      </div></center><br/>
+
+        <center>
+       <div class="col-sm-12 col-md-3">
+       <label for="exampleFormControlInput1">Payment Mode</label>
+       <select  aria-label=".form-select-sm example" name="mode" style="text-align:center">
+            <option selected value="Online">Online</option>
+            <option value="Offline">Offline</option> 
+       </select>
+       </div> 
+       </center>  <br/> 
+      
+      <center>
+      <div class="col-sm-12 col-md-3">
+      <label for="exampleFormControlInput1">Size</label>
+       <select  aria-label=".form-select-sm example" name="size" style="text-align:center">
+            <option selected value="32">32</option>
+            <option value="34">34</option> 
+            <option value="34">36</option> 
+            <option value="38">38</option> 
+            <option value="40">40</option> 
+            <option value="42">42</option> 
+
+       </select>
+       </div> 
+       </center>  <br/><br/><br/> 
      
-      <center><button type="submit" class="btn btn-dark btnsubmit col-sm-5 col-md-2" style="margin-bottom:20px; margin-top:20px" id="one" onclick="show()" >Buy</button> </center>
-      <center><button type="button" class="btn btn-primary col-sm-5 col-md-2" id="rzp-button1" style="margin-bottom:30px" disabled="disabled">Pay</button></center>
+      
+      <center><button type="submit" class="btn btn-dark btnsubmit col-sm-5 col-md-2"  style="margin-bottom:20px; margin-top:20px" id="one" onclick="show()" >Buy</button> </center>
+      <center><label for="exampleFormControlInput1">For Online Payment</label></center>
+      <center><button type="button" class="btn btn-primary col-sm-5 col-md-2" id="rzp-button1" style="margin-bottom:30px" >Pay</button></center>
 </form>              
 
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
@@ -41,9 +69,9 @@
 var options = {
     "key": "{{api_key}}", // Enter the Key ID generated from the Dashboard
     "currency": "INR",
-    "name": "Acme Corp",
-    "description": "Test Transaction",
-    "image": "https://example.com/your_logo",
+    "name": "GamesNation",
+    "description": "Online Payment",
+    "image": "{% static 'base/img/logo.jpg' %}",
     "order_id":"{{order_id}}", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
     "handler": function (response){
         alert(response.razorpay_payment_id);
@@ -78,10 +106,7 @@ document.getElementById('rzp-button1').onclick = function(e){
     e.preventDefault();
 }
 
-function show()
-{
-    document.getElementById('rzp-button1').removeAttribute('disabled');
-}
+  
 </script>
                         {% comment %} <p> ugndnummbf</p>
                         <div class="date">
