--- a/base/templates/base/create.html
+++ b/base/templates/base/create.html
@@ -4,8 +4,8 @@
 
 <div class="col-lg-12" style="margin-top:120px">
 	<div class="main_title">
-		<h2>Create a Post</h2>
-		<h1>Create a Post</h1>
+		<h2>Create a Blog</h2>
+		<h1>Create a Blog</h1>
 	</div>
 </div>
 
