--- a/base/templates/base/tournament.html
+++ b/base/templates/base/tournament.html
@@ -88,9 +88,65 @@
 				</div>
 			</div>
 
+		<section class="blog_area">
+		<div class="container">
 			
-
-	</div>
+			<div class="row">
+				<div class="col-lg-4 col-md-6">
+					<div class="blog_items">
+						<div class="blog_img_box">
+							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+						</div>
+						<div class="blog_content">
+							<a class="title" href="blog.html">Testing</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<div class="date">
+								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
+								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
+								<a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> 05</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="blog_items">
+						<div class="blog_img_box">
+							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+						</div>
+						<div class="blog_content">
+							<a class="title" href="blog.html">Testing2</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<div class="date">
+								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
+								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
+								<a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> 05</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 hidden-md">
+					<div class="blog_items">
+						<div class="blog_img_box">
+							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+						</div>
+						<div class="blog_content">
+							<a class="title" href="blog.html">Testing3</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<div class="date">
+								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
+								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
+								<a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> 05</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+    </div>
 	
 	<div>
 		<div class="container">
@@ -102,8 +158,65 @@
 					</div>
 				</div>
 			</div>
-
-	</div>
+		<section class="blog_area">
+		<div class="container">
+			
+			<div class="row">
+				<div class="col-lg-4 col-md-6">
+					<div class="blog_items">
+						<div class="blog_img_box">
+							<img class="img-fluid" src="{% static 'base/img/pubg_tour/pubga.png' %}" alt="">
+						</div>
+						<div class="blog_content">
+							<a class="title" href="blog.html">Testing</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<div class="date">
+								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
+								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
+								<a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> 05</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="blog_items">
+						<div class="blog_img_box">
+							<img class="img-fluid" src="{% static 'base/img/pubg_tour/pubgb.png' %}" alt="">
+						</div>
+						<div class="blog_content">
+							<a class="title" href="blog.html">Testing2</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<div class="date">
+								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
+								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
+								<a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> 05</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 hidden-md">
+					<div class="blog_items">
+						<div class="blog_img_box">
+							<img class="img-fluid" src="{% static 'base/img/pubg_tour/pubgc.png' %}" alt="">
+						</div>
+						<div class="blog_content">
+							<a class="title" href="blog.html">Testing3</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<div class="date">
+								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
+								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
+								<a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> 05</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+    </div>
 
 	<div>
 		<div class="container">
@@ -115,8 +228,65 @@
 					</div>
 				</div>
 			</div>
-
-	</div>
+		<section class="blog_area">
+		<div class="container">
+			
+			<div class="row">
+				<div class="col-lg-4 col-md-6">
+					<div class="blog_items">
+						<div class="blog_img_box">
+							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+						</div>
+						<div class="blog_content">
+							<a class="title" href="blog.html">Testing</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<div class="date">
+								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
+								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
+								<a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> 05</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="blog_items">
+						<div class="blog_img_box">
+							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+						</div>
+						<div class="blog_content">
+							<a class="title" href="blog.html">Testing2</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<div class="date">
+								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
+								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
+								<a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> 05</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 hidden-md">
+					<div class="blog_items">
+						<div class="blog_img_box">
+							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+						</div>
+						<div class="blog_content">
+							<a class="title" href="blog.html">Testing3</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<div class="date">
+								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
+								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
+								<a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> 05</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+   </div>
 
 	<div>
 		<div class="container">
@@ -128,6 +298,64 @@
 					</div>
 				</div>
 			</div>
+    	<section class="blog_area">
+		<div class="container">
+			
+			<div class="row">
+				<div class="col-lg-4 col-md-6">
+					<div class="blog_items">
+						<div class="blog_img_box">
+							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+						</div>
+						<div class="blog_content">
+							<a class="title" href="blog.html">Testing</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<div class="date">
+								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
+								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
+								<a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> 05</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="blog_items">
+						<div class="blog_img_box">
+							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+						</div>
+						<div class="blog_content">
+							<a class="title" href="blog.html">Testing2</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<div class="date">
+								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
+								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
+								<a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> 05</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 hidden-md">
+					<div class="blog_items">
+						<div class="blog_img_box">
+							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+						</div>
+						<div class="blog_content">
+							<a class="title" href="blog.html">Testing3</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<div class="date">
+								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
+								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
+								<a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> 05</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 	</div>
 	
