--- a/base/templates/base/tournament.html
+++ b/base/templates/base/tournament.html
@@ -95,12 +95,13 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="blog_items">
 						<div class="blog_img_box">
-							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+							<img class="img-fluid" src="{% static 'base/img/codm_tour/codma.png' %}" alt="">
 						</div>
 						<div class="blog_content">
-							<a class="title" href="blog.html">Testing</a>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<a class="title" href="blog.html">Flipkart Mobile Gaming Champions</a>
+							<p>The prizepool for the tourney is 35L Rs. The registration starts on 15th Cotober and end on 30th October.
+								There will be 128 spots up for grab so hurry up and register yourself.
+							</p>
 							<div class="date">
 								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
 								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
@@ -112,12 +113,13 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="blog_items">
 						<div class="blog_img_box">
-							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+							<img class="img-fluid" src="{% static 'base/img/codm_tour/codmb.png' %}" alt="">
 						</div>
 						<div class="blog_content">
-							<a class="title" href="blog.html">Testing2</a>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<a class="title" href="blog.html">CODM World Championship 2020</a>
+							<p>The prizepool for the tourney is 100,000$. The registration starts on 20th Cotober and end on 30th October.
+								There will be 128 spots up for grab so hurry up and register yourself.
+							</p>
 							<div class="date">
 								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
 								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
@@ -129,12 +131,13 @@
 				<div class="col-lg-4 hidden-md">
 					<div class="blog_items">
 						<div class="blog_img_box">
-							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+							<img class="img-fluid" src="{% static 'base/img/codm_tour/codmc.png' %}" alt="">
 						</div>
 						<div class="blog_content">
-							<a class="title" href="blog.html">Testing3</a>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<a class="title" href="blog.html">CODM World Championship 2021</a>
+							<p>The prizepool for the tourney is 100,000$. The registration starts on 15th Cotober and end on 30th October.
+								There will be 128 spots up for grab so hurry up and register yourself.
+							</p>
 							<div class="date">
 								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
 								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
@@ -168,9 +171,10 @@
 							<img class="img-fluid" src="{% static 'base/img/pubg_tour/pubga.png' %}" alt="">
 						</div>
 						<div class="blog_content">
-							<a class="title" href="blog.html">Testing</a>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<a class="title" href="blog.html">PMIS 2020</a>
+							<p>The prizepool for the tourney is 35L Rs. The registration starts on 15th Cotober and end on 30th October.
+								There will be 128 spots up for grab so hurry up and register yourself.
+							</p>
 							<div class="date">
 								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
 								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
@@ -185,9 +189,10 @@
 							<img class="img-fluid" src="{% static 'base/img/pubg_tour/pubgb.png' %}" alt="">
 						</div>
 						<div class="blog_content">
-							<a class="title" href="blog.html">Testing2</a>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<a class="title" href="blog.html">PMIT 2020</a>
+							<p>The prizepool for the tourney is 1.5Cr Rs. The registration starts on 15th Cotober and end on 30th October.
+								There will be 128 spots up for grab so hurry up and register yourself.
+							</p>
 							<div class="date">
 								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
 								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
@@ -202,9 +207,10 @@
 							<img class="img-fluid" src="{% static 'base/img/pubg_tour/pubgc.png' %}" alt="">
 						</div>
 						<div class="blog_content">
-							<a class="title" href="blog.html">Testing3</a>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<a class="title" href="blog.html">PMGC 2021</a>
+							<p>The prizepool for the tourney is 6,000,000$. The registration starts on 15th Cotober and end on 30th October.
+								There will be 128 spots up for grab so hurry up and register yourself.
+							</p>
 							<div class="date">
 								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
 								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
@@ -235,12 +241,13 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="blog_items">
 						<div class="blog_img_box">
-							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+							<img class="img-fluid" src="{% static 'base/img/valo_tour/valoa.png' %}" alt="">
 						</div>
 						<div class="blog_content">
-							<a class="title" href="blog.html">Testing</a>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<a class="title" href="blog.html">Ignition Series </a>
+							<p>The prizepool for the tourney is 35L Rs. The registration starts on 15th Cotober and end on 30th October.
+								There will be 128 spots up for grab so hurry up and register yourself.
+							</p>
 							<div class="date">
 								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
 								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
@@ -252,12 +259,13 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="blog_items">
 						<div class="blog_img_box">
-							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+							<img class="img-fluid" src="{% static 'base/img/valo_tour/valob.png' %}" alt="">
 						</div>
 						<div class="blog_content">
-							<a class="title" href="blog.html">Testing2</a>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<a class="title" href="blog.html">Sea Invitational</a>
+							<p>The prizepool for the tourney is 35L Rs. The registration starts on 15th Cotober and end on 30th October.
+								There will be 128 spots up for grab so hurry up and register yourself.
+							</p>
 							<div class="date">
 								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
 								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
@@ -269,12 +277,13 @@
 				<div class="col-lg-4 hidden-md">
 					<div class="blog_items">
 						<div class="blog_img_box">
-							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+							<img class="img-fluid" src="{% static 'base/img/valo_tour/valoc.png' %}" alt="">
 						</div>
 						<div class="blog_content">
-							<a class="title" href="blog.html">Testing3</a>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<a class="title" href="blog.html">Valo India Tour</a>
+							<p>The prizepool for the tourney is 35L Rs. The registration starts on 15th Cotober and end on 30th October.
+								There will be 128 spots up for grab so hurry up and register yourself.
+							</p>
 							<div class="date">
 								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
 								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
@@ -305,12 +314,13 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="blog_items">
 						<div class="blog_img_box">
-							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+							<img class="img-fluid" src="{% static 'base/img/ff_tour/ffa.png' %}" alt="">
 						</div>
 						<div class="blog_content">
-							<a class="title" href="blog.html">Testing</a>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<a class="title" href="blog.html">Super Sunday</a>
+							<p>The prizepool for the tourney is 35L Rs. The registration starts on 15th Cotober and end on 30th October.
+								There will be 128 spots up for grab so hurry up and register yourself.
+							</p>
 							<div class="date">
 								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
 								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
@@ -322,12 +332,13 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="blog_items">
 						<div class="blog_img_box">
-							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+							<img class="img-fluid" src="{% static 'base/img/ff_tour/ffb.png' %}" alt="">
 						</div>
 						<div class="blog_content">
-							<a class="title" href="blog.html">Testing2</a>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<a class="title" href="blog.html">King of Free Fire</a>
+							<p>The prizepool for the tourney is 35L Rs. The registration starts on 15th Cotober and end on 30th October.
+								There will be 128 spots up for grab so hurry up and register yourself.
+							</p>
 							<div class="date">
 								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
 								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
@@ -339,12 +350,13 @@
 				<div class="col-lg-4 hidden-md">
 					<div class="blog_items">
 						<div class="blog_img_box">
-							<img class="img-fluid" src="{% static 'base/img/codm1.jpg' %}" alt="">
+							<img class="img-fluid" src="{% static 'base/img/ff_tour/ffc.png' %}" alt="">
 						</div>
 						<div class="blog_content">
-							<a class="title" href="blog.html">Testing3</a>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+							<a class="title" href="blog.html">Gaming Monk Ultimate Tournament</a>
+							<p>The prizepool for the tourney is 35L Rs. The registration starts on 15th Cotober and end on 30th October.
+								There will be 128 spots up for grab so hurry up and register yourself.
+							</p>
 							<div class="date">
 								<a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>13th Dec </a>
 								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i> 15</a>
